--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview", 
+    "deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
@@ -17,6 +18,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.5",
     "@vue/compiler-sfc": "^3.0.5",
-    "vite": "^2.4.2"
-  }
+    "vite": "^2.4.2", 
+    "execa": "latest"
+  } 
+
+   
 }
